--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "devcontainer",
-	"image": "alpine:3.14",
+	"image": "mcr.microsoft.com/vscode/devcontainers/base:0.202.2-alpine3.14",
 	"settings": {
 		"workbench.colorTheme": "Default Dark+",
 		"terminal.integrated.defaultProfile.linux": "pwsh"
