--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,5 +5,14 @@
 		"workbench.colorTheme": "Default Dark+",
 		"terminal.integrated.defaultProfile.linux": "pwsh"
 	},
-	"postCreateCommand": "",
+	"extensions": [
+		"vscode-icons-team.vscode-icons",
+		"ban.spellright",
+		"visualstudioexptteam.vscodeintellicode",
+		"coenraads.bracket-pair-colorizer",
+		"ms-dotnettools.csharp",
+		"ms-azuretools.vscode-docker",
+		"ms-vscode.powershell",
+		"bierner.markdown-preview-github-styles"
+	],
 }
