--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,21 @@
 {
 	"name": "devcontainer",
-	"image": "mcr.microsoft.com/vscode/devcontainers/base:0.202.2-alpine3.14",
+	"image": "pipelinefoundation/pf-devcontainer:1.0.0-alpine",
 	"settings": {
 		"workbench.colorTheme": "Default Dark+",
 		"terminal.integrated.defaultProfile.linux": "pwsh"
 	},
 	"extensions": [
-		"vscode-icons-team.vscode-icons",
-		"ban.spellright",
-		"visualstudioexptteam.vscodeintellicode",
+		// VS Code specific
 		"coenraads.bracket-pair-colorizer",
-		"ms-dotnettools.csharp",
+		"vscode-icons-team.vscode-icons",
+		// GitHub specific
+		"eamodio.gitlens",
+		"cschleiden.vscode-github-actions",
+		"bierner.markdown-preview-github-styles",
+		"ban.spellright",
+		"GitHub.copilot",
 		"ms-azuretools.vscode-docker",
 		"ms-vscode.powershell",
-		"bierner.markdown-preview-github-styles"
 	],
 }
